--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: # this should be empty
 url: "https://ohreagano.github.io/"
 
 author:
-  fullname: Reagan Cline
+  fullname: Reagan
   # googleplus: 
   github: ohreagano
   twitter: ohreagano
