Revert "Change background to yellow"
This reverts commit 67e04ad4eff0f2b156f3d0cec71be21da06b7db9.

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: # this should be empty
 url: "https://ohreagano.github.io/"
 
 author:
-  fullname: Reagan
+  fullname: Reagan Cline
   # googleplus: 
   github: ohreagano
   twitter: ohreagano
