Updated categories + add coursework

--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -1,5 +1,9 @@
+- slug: portfolio
+  name: Portfolio
+  
 - slug: resources
   name: Resources
 
-- slug: inls161
-  name: "INLS 161"
+- slug: coursework
+  name: Coursework
+  
