removing nav menus to posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
 title: Reagan Cline
 description: >
-  This is a site I am developing to learn jekyll, Markdownl, CSS, HTML5, and other cool web things in INLS 161
-  at UNC Chapel Hill. 
+  Product Analyst at Fleetio | Venture for America Fellow | freelance graphic designer
 
 baseurl: # this should be empty
 url: "https://ohreagano.github.io/"
